--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -2,5 +2,9 @@
     <div>Powered by <a href='/Licence'>AkariEngine</a></div>
     <div>Contents are licensed under <%= global.licence %> unless otherwise specified.</div>
     <div>본 웹사이트의 내용은 별도로 명시된 경우를 제외하고 <%= global.licence %> 라이선스 하에 배포됩니다.</div>
-    <div><a href='mailto:admin@gecwiki.kr'>Contact</a> | <a href='/Licence'>Licence</a> | <a href='/w/GECWiki:개인정보처리방침'>개인정보처리방침</a> | <a href='/w/GECWiki:규칙'>규칙</a> | <a href='/w/GECWiki:면책 조항'>면책 조항</a> | <a href='/noEmail'>이메일 주소 무단 수집 거부</a></div>
+    <div>
+        <% for (let i = 0; i < global.conf.specialPages.length; i++) { %>
+        <a href='<%= global.conf.specialPages[i].link %>'><%= global.conf.specialPages[i].title %></a> <%= (i < global.conf.specialPages.length - 1) ? ' | ' : '' %>
+        <% } %>
+    </div>
 </footer>
