--- a/src/views/pages/recentchanges.html
+++ b/src/views/pages/recentchanges.html
@@ -24,6 +24,7 @@
         <tbody id = 'rclist'>
         </tbody>
     </table>
+    <div id='rcplaceholder'>Loading...</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src='/js/readRC.js'></script>
