--- a/src/views/admin/index.html
+++ b/src/views/admin/index.html
@@ -4,5 +4,5 @@
     <li><a href='/admin/blockip'>Block IP address</a></li>
     <li><a href='/admin/loginhistory'>Login History</a></li>
     <li><a href='/admin/hiderev'>Hide specific revision of a page</a></li>
-    <li><a href=/admin/developer'>Developer menu</a></li>
+    <li><a href='/admin/developer'>Developer menu</a></li>
 </ul>
