--- a/src/views/pages/recentchanges.html
+++ b/src/views/pages/recentchanges.html
@@ -11,13 +11,18 @@
 </div>
 <div style='clear:both'></div>
 <div style='overflow-x: auto'>
-    <table class="table">
+    <table class="table" style='min-width: 380px;'>
         <thead>
+            <colgroup>
+                <col style='min-width: 40%;'>
+                <col style='min-width: 64px;'>
+                <col style='min-width: 64px;'>
+                <col style='min-width: 100px;'>
+            </colgroup>
             <tr>
                 <th scope='col'>Page name</th>
                 <th scope='col'>Username</th>
                 <th scope='col'>Change made</th>
-                <th scope='col'>Comment</th>
                 <th scope='col'>Date</th>
             </tr>
         </thead>
