--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -1,3 +1,7 @@
+*
+{
+    font-family: "Apple SD Gothic Neo", 나눔고딕, NanumGothic, "Noto Sans CJK KR", "Noto Sans KR", "Noto Sans", 맑은고딕, "Malgun Gothic", arial, sans-serif;
+}
 body
 {
     background-color: #f5f5f5;
@@ -19,6 +23,12 @@ body
 {
     /*display: grid;*/
     float: right;
+}
+.pgTitle
+{
+    display: inline-block;
+    overflow-wrap: anywhere;
+    font-weight: 600;
 }
 .article-wrapper
 {
@@ -165,9 +175,4 @@ body
 .dropdown-item.active, .dropdown-item:active
 {
     background-color: #7aa7d6 !important;
-}
-
-#iealert
-{
-    display: none;
 }
