--- a/src/views/IEalert.ejs
+++ b/src/views/IEalert.ejs
@@ -1,4 +1,4 @@
-<div class='alert alert-danger' style='display: none' role='alert'>
+<div class='alert alert-danger' style='display: none' role='alert' id='iealert'>
     <h4 class='alert-heading'>
         <i class='fa fa-exclamation-triangle'></i>
         Internet Explorer is not supported.
