--- a/src/views/outline.ejs
+++ b/src/views/outline.ejs
@@ -18,7 +18,7 @@
                 <div class='alert alert-info' id='satobox' style='display: none' role="alert">
                     An <a id='satoboxlink'>user page discussion</a> is open.
                 </div>
-                <div class='pb-2 mt-2 mb-3 border-bottom'>
+                <div class='pb-2 mt-2 mb-3 border-bottom titleArea'>
                     <h1 class='pgTitle'><%= title %><% if (locals.titleInfo) { %><h5 style='display: inline;margin-left:10px;'><%- locals.titleInfo %></h5><% } %></h1>
                     <% if (locals.isPage) { %>
                         <%- include('pageTools') %>
