--- a/src/views/pages/revert.ejs
+++ b/src/views/pages/revert.ejs
@@ -10,7 +10,7 @@
     <% } %>
     <input type='hidden' value='<%= rev %>' name='rev'>
     <div class='mt-2 mb-2'>
-        <%- captcha %>
+        <div class='captcha'><%- captcha %></div>
         <div class='row'>
             <label for='captchaIn' class='col-form-label col-sm-4'>CAPTCHA</b></label>
             <div class='col-sm-8'>
