--- a/src/views/rc.ejs
+++ b/src/views/rc.ejs
@@ -1,10 +1,9 @@
 <aside>
     <div id='rcsidebar' class='row border rounded'>
         <div class='pb-2 mt-2 border-bottom'>
-            <a href='/RecentChanges'><span class='fw-bold' style='color:black;'>RecentChanges</span> <i class="fas fa-external-link-square-alt ren-extlink-icon"></i></a>
+            <a href='/RecentChanges'><span class='fw-bold rcTitle'>RecentChanges</span> <i class="fas fa-external-link-square-alt ren-extlink-icon"></i></a>
         </div>
         <ul class="list-group list-group-flush" id='rcsidebarcontents'>
         </ul>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </div>
 </aside>
