--- a/src/views/user/signup.ejs
+++ b/src/views/user/signup.ejs
@@ -27,7 +27,7 @@
         </div>
         <p><span class='text-danger fw-bold'>WARNING!</span>    YOU CANNOT reset your password once you forget it. Make sure you make your password memorable.</p>
         <div class='mt-2 mb-2'>
-            <%- captcha %>
+            <div class='captcha'><%- captcha %></div>
             <div class='row'>
                 <label for='captchaIn' class='col-form-label col-sm-4'>CAPTCHA</b></label>
                 <div class='col-sm-8'>
