--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -1,7 +1,7 @@
 <% if (locals.username !== undefined) { %>
 <form action='/Upload' enctype='multipart/form-data' method='POST'>
     <div class='mt-2 mb-2'>
-        <%- captcha %>
+        <div class='captcha'><%- captcha %></div>
         <div class='row'>
             <label for='captchaIn' class='col-form-label col-sm-2'>CAPTCHA</b></label>
             <div class='col-sm-10'>
