--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class='mt-2 mb-2'>
-        <%- captcha %>
+        <div class='captcha'><%- captcha %></div>
         <div class='row'>
             <label for='captchaIn' class='col-form-label col-sm-2'>CAPTCHA</b></label>
             <div class='col-sm-10'>
