--- a/src/views/pages/histories.ejs
+++ b/src/views/pages/histories.ejs
@@ -1,13 +1,13 @@
-<form action='/diff/<%= changes[0].page%>' method='GET' style='width:270px'>
+<form action='/diff/<%= changes[0].page%>' method='GET' style='width:350px'>
     <div class="mb-3 row">
         <label for="rev1" class="col-sm-2 col-form-label" style='width: 200px'>Compare version no.</label>
-        <div class="col-sm-10" style='width: 92px'>
+        <div class="col-sm-10" style='width: 120px'>
             <input type="number" class="form-control" id='rev1' name='rev1' min='1'>
         </div>
     </div>
     <div class="mb-3 row">
         <label for="rev2" class="col-sm-2 col-form-label" style='width: 200px'>and version no.</label>
-        <div class="col-sm-10" style='width: 92px'>
+        <div class="col-sm-10" style='width: 120px'>
             <input type="number" class="form-control" id='rev2' name='rev2' min='1'>
         </div>
     </div>
@@ -23,7 +23,6 @@
                 <th scope='col'>Revision Name</th>
                 <th scope='col'>Username</th>
                 <th scope='col'>Change made</th>
-                <th scope='col'>Comment</th>
                 <th scope='col'>Date</th>
                 <th scope='col' style='width: 160px'></th>
             </tr>
@@ -60,7 +59,6 @@
                         <sup><a href='/contribution/<%= changes[i].editedby %>'>C</a></sup>
                     </td>
                     <td><%= changes[i].type %></td>
-                    <td><%= changes[i].comment %></td>
                     <td><%= date.format(changes[i].createdAt, global.dtFormat) %> </td>
                     <td>
                         <% let lnk = '/raw/' + encodeURI(changes[i].page) + '?rev=' + changes[i].rev.toString() %>
@@ -71,6 +69,9 @@
                         <% } %>
                     </td>
                 </tr>
+                <% if (changes[i].comment) { %>
+                <tr><td style='word-wrap: anywhere;' colspan='5'><%=changes[i].comment%></td></tr>
+                <% } %>
             <% } %>
         </tbody>
     </table>
