--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -19,9 +19,9 @@
             </li>
             <!-- RandomPage -->
             <li class="nav-item">
-                <a class="nav-link" href="/RandomPage">
-                    <i class="fas fa-random"></i>
-                    <span class='d-none d-xl-inline'>RandomPage</span>
+                <a class="nav-link" href="https://board.gecwiki.kr/">
+                    <i class="fas fa-clipboard-list"></i>
+                    <span class='d-none d-xl-inline'>Forum</span>
                 </a>
             </li>
             <!-- toolbox -->
@@ -31,6 +31,12 @@
                     <span class='d-none d-xl-inline'>Tools</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarTools" style='position: absolute'>
+                    <li>
+                        <a class="nav-link" href="/RandomPage">
+                            <i class="fas fa-random"></i>
+                            <span class='d-none d-xl-inline'>RandomPage</span>
+                        </a>
+                    </li>
                     <li>
                         <!-- pagelist-->
                         <a class="dropdown-item" href="/PageList">
