--- a/src/views/pages/histories.ejs
+++ b/src/views/pages/histories.ejs
@@ -1,12 +1,12 @@
 <form action='/diff/<%= changes[0].page%>' method='GET' style='width:350px'>
     <div class="mb-3 row">
-        <label for="rev1" class="col-sm-2 col-form-label" style='width: 200px'>Compare version no.</label>
+        <label for="rev1" class="col-sm-2 col-form-label" style='width: 250px'>Compare version no. (r...)</label>
         <div class="col-sm-10" style='width: 120px'>
             <input type="number" class="form-control" id='rev1' name='rev1' min='1'>
         </div>
     </div>
     <div class="mb-3 row">
-        <label for="rev2" class="col-sm-2 col-form-label" style='width: 200px'>and version no.</label>
+        <label for="rev2" class="col-sm-2 col-form-label" style='width: 250px'>and version no. (r...)</label>
         <div class="col-sm-10" style='width: 120px'>
             <input type="number" class="form-control" id='rev2' name='rev2' min='1'>
         </div>
@@ -24,7 +24,7 @@
                 <th scope='col'>Username</th>
                 <th scope='col'>Change made</th>
                 <th scope='col'>Date</th>
-                <th scope='col' style='width: 160px'></th>
+                <th scope='col' style='width: 180px'></th>
             </tr>
         </thead>
         <tbody>
@@ -62,11 +62,8 @@
                     <td><%= date.format(changes[i].createdAt, global.dtFormat) %> </td>
                     <td>
                         <% let lnk = '/raw/' + encodeURI(changes[i].page) + '?rev=' + changes[i].rev.toString() %>
-                        <a href=<%= lnk %>><button type="button" class="btn btn-secondary">RAW</button></a>
-                        <%if (changes[i].type == 'edit' || changes[i].type == 'create' || changes[i].type == 'revert') { %>
-                            <% let lnk = '/revert/' + encodeURI(changes[i].page) + '?rev=' + changes[i].rev.toString() %>
-                            <a href=<%= lnk %>><button type="button" class="btn btn-danger">Revert</button></a>
-                        <% } %>
+                        <% let lnk2 = '/revert/' + encodeURI(changes[i].page) + '?rev=' + changes[i].rev.toString() %>
+                        <a href="<%= lnk %>">RAW</a><%if (changes[i].type == 'edit' || changes[i].type == 'create' || changes[i].type == 'revert') { %> | <a href='<%= lnk2 %>'>Revert</a><% } %><% if (changes[i].rev > 1) { %> | <a href ='/diff/<%= changes[i].page %>?rev1=<%= changes[i].rev %>&rev2=<%= changes[i].rev - 1%>'>diff</a><% } %>
                     </td>
                 </tr>
                 <% if (changes[i].comment) { %>
