--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -32,7 +32,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarTools" style='position: absolute'>
                     <li>
-                        <a class="nav-link" href="/RandomPage">
+                        <a class="dropdown-item" href="/RandomPage">
                             <i class="fas fa-random"></i>
                             <span class='d-none d-xl-inline'>RandomPage</span>
                         </a>
