--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -33,7 +33,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarTools" style='position: absolute'>
                     <li>
                         <a class="dropdown-item" href="/RandomPage">
-                            <i class="fas fa-random"></i>
+                            <i class="fa fa-random nav-icon"></i>
                             <span class='d-none d-xl-inline'>RandomPage</span>
                         </a>
                     </li>
@@ -41,34 +41,33 @@
                         <!-- pagelist-->
                         <a class="dropdown-item" href="/PageList">
                             <i class="fa fa-list-ul nav-icon"></i>
-                            <span>PageList</span>
+                            <span class='d-none d-xl-inline'>PageList</span>
                         </a>
                     </li>
-                    <li>
                     <li>
                         <!-- upload -->
                         <a class="dropdown-item" href="/Upload">
                             <i class="fa fa-upload nav-icon"></i>
-                            <span>Upload</span>
+                            <span class='d-none d-xl-inline'>Upload</span>
                         </a>
                     </li>
                     <li>
                         <!-- Admin log -->
                         <a class="dropdown-item" href="/adminlog">
                             <i class="fa fa-history nav-icon"></i>
-                        <span>Admin log</span>
+                            <span class='d-none d-xl-inline'>Admin log</span>
                         </a>
                     </li>
                     <li>
                         <a class="dropdown-item" href="/viewrank">
-                            <i class="fas fa-chart-line"></i>
-                            <span>View count rank</span>
+                            <i class="fa fa-chart-line nav-icon"></i>
+                            <span class='d-none d-xl-inline'>View count rank</span>
                         </a>
                     </li>
                     <li>
                         <a class="dropdown-item" href="/Licence">
                             <i class="fa fa-check nav-icon"></i>
-                            <span>Licence</span>
+                            <span class='d-none d-xl-inline'>Licence</span>
                         </a>
                     </li>
                 </ul>
