--- a/src/views/admin/index.html
+++ b/src/views/admin/index.html
@@ -1,3 +1,4 @@
+<h4>위키 관리 도구</h4>
 <ul>
     <li><a href='/admin/grant'>Grant</a></li>
     <li><a href='/admin/blockuser'>Block user (Login User)</a></li>
@@ -5,4 +6,8 @@
     <li><a href='/admin/loginhistory'>Login History</a></li>
     <li><a href='/admin/hiderev'>Hide specific revision of a page</a></li>
     <li><a href='/admin/developer'>Developer menu</a></li>
+</ul>
+<h4>게시판 관리 도구</h4>
+<ul>
+    <li><a href='/admin/gongji'>공지 변경</a></li>
 </ul>
