--- a/src/public/css/boardList.css
+++ b/src/public/css/boardList.css
@@ -6,7 +6,7 @@
 {
     border-bottom: 1px solid #aaaaaa80;
 }
-.articleInfo:hover, .articleInfo_current
+.articleInfo:hover, .articleInfo_current, .articleInfo_gongji
 {
     background-color: #eeeeee;
 }
