--- a/src/views/rc.ejs
+++ b/src/views/rc.ejs
@@ -7,7 +7,7 @@
             <ul class="list-group list-group-flush" id='rcsidebarcontents'>
             </ul>
         </div>
-        <div class='border rounded' style='margin-top: 30px;'>
+        <div class='border rounded' style='margin-top: 1rem;'>
             <div class='p-2 border-bottom bg-white'>
                 <a href='/board'><span class='fw-bold rcTitle'>Recent Posts</span> <i class="fas fa-external-link-square-alt ren-extlink-icon"></i></a>
             </div>
