--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -30,7 +30,7 @@
                     <i class="fas fa-cog"></i>
                     <span class='d-none d-xl-inline'>Tools</span>
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarTools" style='position: absolute'>
+                <ul class="dropdown-menu dropdown-menu-macos shadow" aria-labelledby="navbarTools" style='position: absolute'>
                     <li>
                         <a class="dropdown-item" href="/RandomPage">
                             <i class="fa fa-random nav-icon"></i>
