--- a/src/views/pageTools.ejs
+++ b/src/views/pageTools.ejs
@@ -6,7 +6,7 @@
   <a class='btn btn-outline-primary dropdown-toggle rounded-end' style='-webkit-appearance: none' type='button' id="pageToolsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
     More
   </a>
-  <ul class='dropdown-menu dropdown-menu-end' aria-labelledby="pageToolsDropdown">
+  <ul class='dropdown-menu dropdown-menu-macos shadow dropdown-menu-end' aria-labelledby="pageToolsDropdown">
     <li><a href='/move/<%= pagename %>' class='dropdown-item'>Move</a></li>
     <li><a href='/delete/<%= pagename %>' class='dropdown-item'>Delete</a></li>
     <li><a href='/protect/<%= pagename %>' class='dropdown-item'>Protection</a></li>
