--- a/src/views/pages/recentchanges.html
+++ b/src/views/pages/recentchanges.html
@@ -2,7 +2,7 @@
     <button class="btn btn-secondary dropdown-toggle float-end" type="button" id="rcshowNDropdown" data-bs-toggle="dropdown" aria-expanded="false">
       Show...
     </button>
-    <ul class="dropdown-menu" aria-labelledby="rcshowNDropdown">
+    <ul class="dropdown-menu dropdown-menu-macos shadow" aria-labelledby="rcshowNDropdown">
       <li><a class="dropdown-item" href="/RecentChanges?show=5">Show 5</a></li>
       <li><a class="dropdown-item" href="/RecentChanges?show=10">Show 10</a></li>
       <li><a class="dropdown-item" href="/RecentChanges?show=30">Show 30</a></li>
